# aosoa_storage

./: .clang-format  .gitignore  CMakeLists.txt  cmakelists.txt  makefile  readme.md
bench/: cabana_mpm.cpp  config.hpp
bench/accelerate/cabana/: cabana_acc.cpp  vector.hpp
bench/accelerate/mirror/: cabana_mirror.cpp
bench/accelerate/old_storage/: old_storage_acc.cpp
bench/accelerate/old_storage/storage/: storage.hpp  type_transform.hpp
bench/accelerate/storage/: storage_acc.cpp
bench/accelerate/storage/math/: vector.hpp
bench/accelerate/storage/storage/: handle.hpp  storage.hpp  type_transform.hpp
bench/accelerate/storage/utils/: grid_iterator.hpp  iterator_range.hpp
bench/cabana_mpm/: cabana_mpm.cpp  grid.hpp  storages.hpp
bench/cabana_mpm/kernels/: initialize_particles.hpp
bench/common/: config.hpp  timer.hpp
bench/mpm/: mpm_bench.cpp
bench/old_storage_mpm/: config.hpp  old_storage_mpm.cpp
bench/old_storage_mpm/math/: vector.hpp
bench/old_storage_mpm/storage/: storage.hpp
bench/storage_mpm/: storage.hpp  storage_mpm.cpp
bench/storage_mpm/math/: vector.hpp
bench/storage_mpm/storage/: handle.hpp  storage.hpp  type_transform.hpp  utils.hpp
bench/storage_mpm/utils/: grid_iterator.hpp  iterator_range.hpp  range.hpp
cmake/: download_project.cmake
doc/old/include/math/: matrix.hpp  vector.hpp
doc/old_accelerate/cabana/: cabana_acc.cpp  storages.hpp
doc/old_accelerate/old_storage/storage/: joined_storage.hpp  storage_fields.hpp  storage_utils.hpp
doc/old_accelerate/storage/: storage_acc.cpp
doc/old_accelerate/storage/math/: vector.hpp
doc/old_accelerate/storage/storage/: handle.hpp  storage.hpp  type_transform.hpp
doc/old_accelerate/storage/utils/: grid_iterator.hpp
doc/old_storage/include/storage/: type_transform.hpp
doc/old_storage_2/: partial_storage.hpp  prelude.hpp  type_transform.hpp
doc/storage/: full_storage.hpp  storage.hpp  utils.hpp
include/aosoa_storage/: storage.hpp  storage_utils.hpp
include/math/: matrix.hpp  prelude.hpp  vector.hpp
include/storage/: config.hpp  fields.hpp  full_storage.hpp  handle.hpp  joined_storage.hpp  kernel_functor.hpp  prelude.hpp  range.hpp  ranged_storage.hpp  slice_holder.hpp  storage.hpp  storage_utils.hpp  type_transform.hpp  utils.hpp
old/include/storage/: storage_fields.hpp
old/tests/storage_tests/: append_test.cpp  join_test.cpp
tests/: hello_world.cpp
tests/common/: config.hpp  grid_iterator.hpp  iterator_range.hpp
tests/fields_tests/: fields_in_functor.cpp
tests/joined/: joined_test_1.cpp  joined_test_2.cpp  joined_test_3.cpp
tests/math/: matrix.cpp
tests/ranged/: range_test.cpp  ranged_storage_1.cpp
tests/storage/: storage_basics_1.cpp  storage_basics_2.cpp  storage_basics_3.cpp  storage_basics_slice.cpp
tests/storage_tests/: append_test.cpp
tests/type_tests/: math_type_test.cpp  trivial_test.cpp  type_test_1.cpp
tests/types/: par_storage.cpp
